# image-processor

./: .gitignore  BMPImage.cpp  BMPImage.h  BMPReader.cpp  BMPReader.h  BMPWriter.cpp  BMPWriter.h  CLAParser.cpp  CLAParser.h  CMakeLists.txt  FilterFactory.cpp  FilterFactory.h  Pipeline.cpp  Pipeline.h  image_processor.cpp  readme.md
filters/: BaseFilter.cpp  BaseFilter.h  CropFilter.cpp  CropFilter.h  EdgeFilter.cpp  EdgeFilter.h  EmbossFilter.cpp  EmbossFilter.h  GSFilter.cpp  GSFilter.h  GaussianFilter.cpp  GaussianFilter.h  NegFilter.cpp  NegFilter.h  SharpFilter.cpp  SharpFilter.h  SimplePixelFilter.cpp  SimplePixelFilter.h
